-- hmatrix-labeled: matrices with row and column headers.
-- Copyright 2014 Nikita Karetnikov <nikita@karetnikov.org>
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, version 3 of the License.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
--
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>.

name:                hmatrix-labeled
version:             0.1.0.0
homepage:            https://github.com/nkaretnikov/hmatrix-labeled
license:             GPL-3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Packed.LMatrix, Data.Packed.LMatrix.IO
  build-depends:       base >=4.6 && <4.9,
                       hmatrix >=0.15 && <0.18,
                       parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
